--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone_edycja.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone_edycja.xhtml
@@ -64,7 +64,8 @@
             </p:panel>
             <p:dataTable id="dokumentyLista_edit" value="#{fakturaView.faktury_edit}" var="wpis" filteredValue="#{fakturaView.faktury_edit_filter}" 
                          selection="#{fakturaView.faktury_edit_select}" rowKey="#{wpis.numerkolejny}" widgetVar="dokTableFakturyedit" rowSelectMode="add" style="max-width: 1400px;"
-                         sortBy="#{wpis.numerkolejny}" sortFunction="#{fakturaView.sortZaksiegowaneFaktury}" emptyMessage="Nie sporządzono faktur w tym miesiącu">
+                         sortBy="#{wpis.numerkolejny}" sortFunction="#{fakturaView.sortZaksiegowaneFaktury}" emptyMessage="Nie sporządzono faktur w tym miesiącu"
+                         rowIndexVar="iindex">
                 <p:ajax event="rowSelectCheckbox" listener="#{fakturaView.sumawartosciwybranych2(fakturaView.faktury_edit_select)}" update="akordeon:formsporzadzone_edit:dokumentyLista_edit :akordeon:formsporzadzone_edit:panelsum_edit confirmDialog" global="false"/>
                 <p:ajax event="rowUnselectCheckbox" listener="#{fakturaView.sumawartosciwybranych2(fakturaView.faktury_edit_select)}" update="akordeon:formsporzadzone_edit:dokumentyLista_edit :akordeon:formsporzadzone_edit:panelsum_edit confirmDialog" global="false"/>
                 <p:ajax event="toggleSelect" listener="#{fakturaView.sumawartosciwybranych2(fakturaView.faktury_edit_select)}" update="akordeon:formsporzadzone_edit:dokumentyLista_edit :akordeon:formsporzadzone_edit:panelsum_edit confirmDialog" global="false"/>      
@@ -79,6 +80,9 @@
                 <p:column selectionMode="multiple"  width="30" style="text-align: center;" />
                 <p:column width="20">
                     <p:rowToggler />
+                </p:column>
+                <p:column width="20" style="text-align: center;">
+                     <h:outputText value="#{iindex+1}"/>
                 </p:column>
                 <p:column styleClass="nrkolejny" headerText="nr kolejny" width="90" sortBy="#{wpis.numerkolejny}" filterBy="#{wpis.numerkolejny}" 
                           filterMatchMode="contains" >
