--- a/kadry/src/main/webapp/pit/sub/dialog/dialog_karta_wynagrodzen.xhtml
+++ b/kadry/src/main/webapp/pit/sub/dialog/dialog_karta_wynagrodzen.xhtml
@@ -7,14 +7,15 @@
 
     xmlns:bcf="http://brzaskun.com/facelets"
     >
-    <p:dialog id="dialogkartawynagrodzen" header="Karta wynagrodzeń dla PIT-11" widgetVar="dialogkartawynagrodzen"  
-              resizable="true"  onShow="ustawdialog('dialogkartawynagrodzen','centertile',1620,450);" closeOnEscape="true" onHide="resetujdialog('dialogkartawynagrodzen');" 
-              >
+    <p:dialog id="dialogkartawynagrodzen" header="Karta wynagrodzeń" widgetVar="dialogkartawynagrodzen"  
+              resizable="false"  onShow="ustawdialog('dialogkartawynagrodzen','centertile',1650,700);" closeOnEscape="true" onHide="resetujdialog('dialogkartawynagrodzen');" 
+              fitViewport="true">
+        <p:ajax event="open" listener="#{kartaWynagrodzenView.pobierzdane(wpisView.angaz)}" update="KartyWynangrodzenListForm" global="false"/>
         <p:outputPanel>
             <h:form  styleClass="formadmin" id="KartyWynangrodzenListForm">
                 <p:panelGrid columns="1">
                     <h:outputText value="pracownik"/>
-                    <h:outputText value="#{kartaWynagrodzenView.selected.nazwiskoImie}"/>
+                    <h:outputText value="#{wpisView.pracownik.nazwiskoImie}"/>
                 </p:panelGrid>
                 <p:dataTable id="datalist" value="#{kartaWynagrodzenView.kartawynagrodzenlist}" var="itemkarta"
                              rowKey="#{itemkarta.id}" sortBy="#{itemkarta.mc}" rowIndexVar="indexka"
@@ -43,6 +44,12 @@
                     </p:column>
                     <p:column width="60">
                         <f:facet name="header">
+                            <h:outputText value="koszt całk."/>
+                        </f:facet>
+                        <bcf:outputpl value="#{itemkarta.kosztpracodawcy}" stylePlus="#{itemkarta.kosztpracodawcy eq 0 ? 'color:silver':null}"/>
+                    </p:column>
+                    <p:column width="60">
+                        <f:facet name="header">
                             <h:outputText value="brutto"/>
                         </f:facet>
                         <bcf:outputpl value="#{itemkarta.brutto}" stylePlus="#{itemkarta.brutto eq 0 ? 'color:silver':null}"/>
@@ -53,6 +60,7 @@
                         </f:facet>
                         <bcf:outputpl value="#{itemkarta.bruttozus}" stylePlus="#{itemkarta.bruttozus eq 0 ? 'color:silver':null}"/>
                     </p:column>
+                  
                     <p:column width="60">
                         <f:facet name="header">
                             <h:outputText value="wyn. bez zus"/>
@@ -89,7 +97,7 @@
                         </f:facet>
                         <bcf:outputpl value="#{itemkarta.podstawaopodatkowania}" stylePlus="#{itemkarta.podstawaopodatkowania eq 0 ? 'color:silver':null}"/>
                     </p:column>
-                    <p:column width="40">
+                    <p:column width="30">
                         <f:facet name="header">
                             <h:outputText value="koszty uzysk."/>
                         </f:facet>
@@ -103,19 +111,31 @@
                     </p:column>
                     <p:column width="45">
                         <f:facet name="header">
-                            <h:outputText value="przychod zagranica"/>
+                            <h:outputText value="komornik"/>
                         </f:facet>
-                        <bcf:outputpl value="#{itemkarta.podstawaopodatkowaniazagranica}" stylePlus="#{itemkarta.podstawaopodatkowaniazagranica eq 0 ? 'color:silver':null}"/>
-                    </p:column>
-                    <p:column width="35" style="text-align: center;">
-                        <f:facet name="header">
-                            <h:outputText value="przekr."/>
-                        </f:facet>
-                            <h:outputText value="&#x2714;" rendered="#{itemkarta.przekroczeniedni eq true}" style="color: green;font-weight: 900;"/>
+                        <bcf:outputpl value="#{itemkarta.komornik}" stylePlus="#{itemkarta.komornik eq 0 ? 'color:silver':null}"/>
                     </p:column>
                     <p:column width="45">
                         <f:facet name="header">
-                            <h:outputText value="podatek zagranica"/>
+                            <h:outputText value="inne potr."/>
+                        </f:facet>
+                        <bcf:outputpl value="#{itemkarta.potraceniainne}" stylePlus="#{itemkarta.potraceniainne eq 0 ? 'color:silver':null}"/>
+                    </p:column>
+<p:column width="55">
+                        <f:facet name="header">
+                            <h:outputText value="podatek"/>
+                        </f:facet>
+                        <bcf:outputpl value="#{itemkarta.podatekdochodowy}" stylePlus="#{itemkarta.podatekdochodowy eq 0 ? 'color:silver':null}"/>
+                    </p:column>
+                    <p:column width="60">
+                        <f:facet name="header">
+                            <h:outputText value="pod.opod. niemcy"/>
+                        </f:facet>
+                        <bcf:outputpl value="#{itemkarta.dochodzagranica}" stylePlus="#{itemkarta.dochodzagranica eq 0 ? 'color:silver':null}"/>
+                    </p:column>
+                    <p:column width="60">
+                        <f:facet name="header">
+                            <h:outputText value="podatek niemcy"/>
                         </f:facet>
                         <bcf:outputpl value="#{itemkarta.podatekdochodowyzagranica}" stylePlus="#{itemkarta.podatekdochodowyzagranica eq 0 ? 'color:silver':null}"/>
                     </p:column>
@@ -125,12 +145,7 @@
                         </f:facet>
                         <bcf:outputpl value="#{itemkarta.praczdrowotnedoodliczenia}" stylePlus="#{itemkarta.praczdrowotnedoodliczenia eq 0 ? 'color:silver':null}"  rendered="#{itempasek.rokI lt 2022}"/>
                     </p:column>-->
-                    <p:column width="55">
-                        <f:facet name="header">
-                            <h:outputText value="podatek"/>
-                        </f:facet>
-                        <bcf:outputpl value="#{itemkarta.podatekdochodowy}" stylePlus="#{itemkarta.podatekdochodowy eq 0 ? 'color:silver':null}"/>
-                    </p:column>
+                    
                     <p:column width="60">
                         <f:facet name="header">
                             <h:outputText value="do wypł."/>
@@ -334,15 +349,16 @@
                 <p:messages showDetail="true"/>
             </h:form>
         </p:outputPanel>
-<!--        <p:outputPanel>
+        <p:outputPanel>
             <p:commandButton value="drukuj" style="width: 120px;" actionListener="#{kartaWynagrodzenView.drukuj()}"/>
+<!--            <p:commandButton value="PIT-11" style="width: 120px;" actionListener="#{kartaWynagrodzenView.pit11}"/>-->
             <p:commandButton value="druk szer." type="button" icon="pi pi-print" styleClass="shadow-1 mb-3">
                 <p:printer target="KartyWynangrodzenListForm:datalist" />
             </p:commandButton>
         </p:outputPanel>
         <p:outputPanel style="margin-top: 10px;">
-            <h:outputText value="W przypadku druku tabeli szerokiej należy ręcznie zmienić orientacje strony na poziomą" style="color: green;"/>
-        </p:outputPanel>-->
+            <h:outputText value="Ważne! W przypadku druku tabeli szerokiej należy ręcznie zmienić orientacje strony na poziomą i zmienić skalę" style="color: green;"/>
+        </p:outputPanel>
     </p:dialog>
 </ui:composition>
 
